# Discord-r-Place-Api

./: .gitignore  Cargo.toml  README.md
Api/: Api.sln  docker-compose.dcproj  docker-compose.yml
Api/Api/: Api.csproj  Database.cs  DiscordClient.cs  Pixel.cs  Program.cs  Server.cs  WebSocketReceiver.cs
Api/Api/Properties/: launchSettings.json
Api/Api/Types/: Server.cs  User.cs
src/: custom_redis.rs  main.rs
