[package]
name = "discord_r_place_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.5.17", features=["ws"]}
tokio = { version = "1.0", features = ["full"] }

r2d2_redis = "0.14.0"